--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Three.js Boilerplate</title>
-	<link rel="stylesheet" href="./dist/main.css" />
+	<link rel="stylesheet" href="./src/css/index.css" />
 </head>
 
 <body>
 	<canvas id="canvas" class="webgl"></canvas>
-	<script type="module" src="./dist/main.js"></script>
+	<script type="module" src="./src/main.ts"></script>
 </body>
 
 </html>
