--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Three.js Boilerplate</title>
-	<link rel="stylesheet" href="./src/css/index.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tower</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./src/css/index.css" />
 </head>
-
 <body>
-	<canvas id="canvas" class="webgl"></canvas>
-	<script type="module" src="./src/main.ts"></script>
-</body>
+	<div id="root">
+    <div id="text">i love you</div>
+    <canvas id="canvas" class="webgl"></canvas>
+</div>
+    <script type="module" src="./src/main.ts"></script>
 
+</body>
 </html>
