--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div id="root">
-    <div id="text">i love you</div>
+    <div id="text"></div>
     <canvas id="canvas" class="webgl"></canvas>
 </div>
     <script type="module" src="./src/main.ts"></script>
